[package]
name = "boringtun-async"
version = "0.0.1"
edition = "2021"

[dependencies]
futures = "0.3.30"
parking_lot = "0.12.1"
pin-project = "1"
socket2 = "0.5.5"
byteorder = "1.5.0"
libc = "0.2.153"
ip_network = "0.4.1"
ip_network_table = "0.2.0"
async-compat = "0.2.3"
etherparse = "0.14.2"
fastrand = "2.0.1"
indexmap = "2.2.3"

[dependencies.boringtun]
version = "0.6.0"

[dependencies.tokio]
version = "1"
features = ["time", "net", "io-util"]

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]

[dev-dependencies]
# last version of tun fixes a performance issue on windows:
tun = { git = "https://github.com/meh/rust-tun.git", features = ["async"] }
tokio = { version = "1.36.0", features = ["full"] }
base64 = "0.21.7"
net-route = "0.2.11"
